Fix genre description overflow and control graph with vis.js options

--- a/app/assets/stylesheets/genres.scss
+++ b/app/assets/stylesheets/genres.scss
@@ -1,3 +1,10 @@
 #graph {
   height: 500px;
 }
+
+#genre {
+  .description {
+    height: 300px;
+    overflow: scroll;
+  }
+}
